fix(docker-compose): Change mysql to mariadb, set UPLOADDEMOS to true

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 6379:6379
 
   get5db:
-    image: mysql
+    image: mariadb
     container_name: get5db
     restart: always
     environment:
@@ -47,7 +47,7 @@ services:
       - REDISURL=redis://:testing@redis:6379
       - REDISTTL=86400
       - USEREDIS=true
-      - UPLOADDEMOS=false
+      - UPLOADDEMOS=true
     restart: always
 
   g5v:
